--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://cf512.github.io/clickygame",
   "dependencies": {
+    "core-js": "^3.6.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "^3.4.1",
+    "yargs-parser": "^18.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
